# FlappyPigeon

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  run.sh
.cache/clangd/index/: _fixes.hpp.4BA5D030F80AC9A0.idx  _vectorize.hpp.70BEF0A4164ADF8E.idx  common.hpp.E2BEF12026221D84.idx  compute_common.hpp.D73ABF9CE3BC6F6A.idx  compute_vector_decl.hpp.F34E116A5283F58E.idx  compute_vector_relational.hpp.61C1F48D7FCDF9F7.idx  constants.hpp.FE32C40C7BB92049.idx  constants.inl.A40ED9EC618EA97F.idx  element.cpp.5CCCB37E5AFF0A3E.idx  element.h.282DC6F045DA299E.idx  epsilon.hpp.94A03E5BE5A9DF10.idx  epsilon.inl.FA4AF5FEF4ECC172.idx  exponential.hpp.A996BA8EE8E2B3E4.idx  func_common.inl.8762A6ED44DD5765.idx  func_exponential.inl.AF8507968581F88C.idx  func_geometric.inl.288A700C2E1D1B63.idx  func_integer.inl.9EE8B829B3E0EB3E.idx  func_matrix.inl.AEE1F81B21777CC7.idx  func_packing.inl.1232C250A33DAB4F.idx  func_trigonometric.inl.40EA39CDD9DF2840.idx  func_vector_relational.inl.87A7B23D1484FF35.idx  fwd.hpp.2056D196324B785B.idx  geometric.hpp.1816A30F8D6970AF.idx  glad.c.D6B8803D95C59645.idx  glad.h.15F589E8553726E8.idx  glm.hpp.FF227957945CDFDF.idx  integer.hpp.671667EB30D198F7.idx  khrplatform.h.D6307749D664C876.idx  (+166 more)
include/: element.h  game.h  input.h  main_menu_scene.h  mesh.h  pigeon.h  renderer.h  resource_manager.h  scene.h  scene_manager.h  shader.h  texture.h
include/elements/: cloud.h  element.h  pigeon.h  text.h  wall.h
include/engine/: game.h  random.h  resource_manager.h  scene_manager.h
include/graphics/: mesh.h  shader.h  texture.h
include/scenes/: main_menu_scene.h  mode_infinite_scene.h  scene.h  scene_names.h
lib/glad/: glad.c  glad.h
shaders/: basicShader.frag  basicShader.vert  basicShaderTransform.vert  basicTriangleShader.frag  defaultShader.frag  defaultShader.vert
src/: element.cpp  game.cpp  input.cpp  main.cpp  main_menu_scene.cpp  mesh.cpp  oldmain.cpp  pigeon.cpp  resource_manager.cpp  scene.cpp  scene_manager.cpp  shader.cpp  texture.cpp
src/elements/: cloud.cpp  element.cpp  pigeon.cpp  wall.cpp
src/engine/: game.cpp  input.cpp  random.cpp  resource_manager.cpp  scene_manager.cpp
src/graphics/: mesh.cpp  shader.cpp  text.cpp  texture.cpp
src/scenes/: main_menu_scene.cpp  mode_infinite_scene.cpp  scene.cpp
